added meta description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Explore insightful articles on technology, cloud computing, AI, 5G, and more. Stay updated with the latest trends and innovations shaping the future of tech."
+    />
 
     <link
       rel="icon"
